# GRU-CUDNN-MKLDNN

./: README.md  check.py
CPU_GGNNC++/: CMakeCache.txt  CMakeLists.txt  Makefile  Result.txt  cmake_install.cmake  constants.h  ggnn  main.cpp
CPU_GGNNC++/Matrix/: Makefile  cmake_install.cmake
GAT/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gat  main.cu
GAT/GPU-Computation/: CMakeLists.txt  Makefile  cmake_install.cmake  comp_unit.cu  comp_unit.cuh  cu_matrix.cu  cu_matrix.cuh  cuda_ops.cuh
GAT/Matrix/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix.hpp
GPU_GGNNC++/: ._constants.h  ._main.cpp  CMakeCache.txt  CMakeLists.txt  CS_247_Homework_1.ipynb  Makefile  cmake_install.cmake  ggnn  main.cpp
GPU_GGNNC++/GPU-Computation/: CMakeLists.txt  Makefile  cmake_install.cmake  comp_unit.cuh  cu_matrix.cu  cu_matrix.cuh
GPU_GGNNC++/Matrix/: CMakeLists.txt  Makefile  cmake_install.cmake  matrix.hpp
